Wed Oct  8 09:32:12 CEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* INVITE and BAN notifys are now delivered from routers to
	  servers (but not clients) on the channel.  Updated specs and
	  code.  Affected files silcd/packet_[send|receive].[ch], 
	  command.c, server.c and server_util.c.

	* Implemented INVITE and BAN announcing.  Affected files are
	  silcd/server.[ch], server_util.c.

	* Implemented SilcStatus error type argument returning in
	  command reply error in server.  Affected file silcd/command.c.

	* Implemented SilcStatus argument returning in comand reply
	  in client library.  The command_reply client operation now
	  returns error specific arguments as well.  Affected files
	  are lib/silcclient/command_reply.[ch], client_resume.c,
	  lib/silccore/silcstatus.[ch].

Sun Oct  5 20:22:08 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Backup router protocol version 1.2 implemented.  Testing still
	  required.  Affected files in silcd/server_backup.[ch], server.c,
	  packet_receive.c and server_internal.h.

Sun Oct  5 12:36:37 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* silc_client_send_[channel|private]_message now return TRUE
	  or FALSE.  Affected file lib/silcclien/client_channel.c and
	  client_prvmsg.c.

Thu Oct  2 17:03:09 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Check for explicit nickname in INVITE and BAN processing
	  during join as well (and don't expect only wildcards in
	  invite/ban strings).  Affected file silcd/command.c.

	* Fixed the INVITE and BAN by public key.  The public key saved
	  is the PK payload (as specified) not the raw data.  Affected
	  file silcd/server_util.c.

Wed Oct  1 20:29:06 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* UTF-8 text message support for actions and notices in SILC
	  Client.  Affected file irssi/src/silc/core/client_ops.c.

	* silc_get_username and silc_get_real_name now returns sensible
	  data on Win32.  Patch by Toni Willberg.  Affected file is