@@ -7,7 +7,7 @@
 <br />
 <small>
 Version: @VERSION@<br />
-Copyright &copy; 2001 - 2002 The SILC Project<br />
+Copyright &copy; 1997 - 2003 The SILC Project<br />
 Updated: @DATE@
 </small>
 <br /><br /><br />
